2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* scatterer.h: Avoid uninitialised variable.

2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* waveguide.h: Deregister waveguide after destruction.

2005-08-19  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* waveguide.h: Don't copy gain material.
	* waveguide.cpp: Ditto.
	* scatterer.h: Ditto.
	* scatterer.cpp: Ditto.
	* stack.cpp: Ditto.
	* interface.cpp: Ditto.
	* infstack.cpp: Ditto.

2005-08-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add no_wall for Section.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* cavity.cpp: Don't allow to turn off coherence.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* stack.h: Add power scattering matrices.
	* stack.cpp: Ditto.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add always_recalc.
	* defs.cpp: Ditto.
	* waveguide.cpp: Ditto.
	* scatterer.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	
2005-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Make more standards compliant.
	* cavity.cpp: Ditto.

2005-07-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Allow to turn off cavity coherence.
	* defs.cpp: Ditto.
	* cavity.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-06-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Wrap extra BlochSection functions.

2005-06-13  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add ASR solver.
	* defs.h: Ditto.
	* defs.cpp: Ditto.

2005-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Fix interface routines with complex conjugate.
	* interface.cpp: Ditto.

2005-05-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* S_scheme_fields.h: Fix Planar plotting.

2005-05-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Add interface routines with complex conjugate.
	* interface.cpp: Ditto.
	* camfr_wrap.cpp: Add BlochSection.
