@@ -1,3 +1,9 @@
+2005-09-28  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* defs.h: Add set_calc_field_profiles.
+	* defs.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
+
 2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* scatterer.h: Avoid uninitialised variable.
